// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage should render a placeholder image if no product images are found 1`] = `
<img
  alt=""
  className="woocommerce-product-image is-placeholder"
  height={60}
  src="https://woocommerce.com/wp-content/plugins/woocommerce/assets/images/placeholder.png"
  width={60}
/>
`;

exports[`ProductImage should render a product image 1`] = `
<img
  alt=""
  className="woocommerce-product-image"
  height={60}
  src="https://i.cloudup.com/pt4DjwRB84-3000x3000.png"
  width={60}
/>
`;
